--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!--ACA COLOCO LA FUENTE QUE ME GUSTO DE GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Spicy+Rice&display=swap" rel="stylesheet">
     <style>
       * {
     box-sizing: border-box;
@@ -42,7 +46,7 @@ body {
     <header class="container-fluid">
       <main class="row">
         <section class="col-12">
-          <h1 class="display-3 text-center text-white">Chess</h1>
+          <h1 class="display-3 text-center text-white spicy-rice-regular" style="font-size: 120px;">Videojuego Chess</h1>
         </section>
         <!--ACA COMIENZA MI AJEDREZ-->
         <section class="col-1"></section>
